--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,29 @@
 = mvc
 
-Description goes here.
+A collection of helpers and MVC mixins.
+<ul>
+    ExtJS::Model for ActiveRecord
+    ExtJS::Controller for ActionController
+    ExtJS::Helpers::Component for rending component with Ext.Component configuration params.
+    ExtJS::Helpers::Store for rendering Ext.data.Store.  Reflects upon Model meta-data to produce Ext.data.Record def'n.
+</ul>
+<code>
+<%
+  @viewport = extjs_component(
+    "xtype" => "viewport",
+    "frame" => true,
+    "layout" => "border")
+  @viewport.add("xtype" => "panel", "contentEl" => "hd", "region" => "north", "height" => 30)
+  @viewport.add(:partial => "/users/grid", "itemId" => "users-grid", "region" => "west")
+  @viewport.add(:partial => "/tasks/grid", "itemId" => "tasks-grid", "region" => "center")
+  @viewport.add("xtype" => "panel", "contentEl" => "ft", "region" => "south", "height" => 20)
+%>
+</code>
+
+
 
 == Note on Patches/Pull Requests
- 
+
 * Fork the project.
 * Make your feature addition or bug fix.
 * Add tests for it. This is important so I don't break it in a
