--- a/README.rdoc
+++ b/README.rdoc
@@ -27,19 +27,21 @@ extjs-mvc contains Model mixin named <tt>ExtJS::Model</tt> which works for <b>th
 Simply include the mixin into your model.  Use the class-method <tt>extjs_fields</tt> to specify those
 fields with will be used to render the <tt>Ext.data.Record.create</tt> field-def'n.
 
-	class User < ActiveRecord::Base
-	  include ExtJS::Model
+  class User < ActiveRecord::Base
+    include ExtJS::Model
 
-	  extjs_fields :exclude => [:password, :password_confirmation]
-      # OR 
-      extjs_fields :name, :description
-      # OR define a column as a Hash
-	  extjs_fields :description, :name => {"sortDir" => "ASC"}, :created_at => {"dateFormat" => "c"}
-	  # OR
-      extjs_fields :name, :description, :parent => [:name, :date]
-      # this would configure associated columns with names like:
-      [...{name: "parent_name", mapping: "parent.name"}, {name: "parent_date", mapping: "parent.date"}...]
-    end
+	extjs_fields :exclude => [:password, :password_confirmation]
+    
+    # OR 
+    extjs_fields :name, :description
+    
+    # OR define a column as a Hash
+    extjs_fields :description, :name => {"sortDir" => "ASC"}, :created_at => {"dateFormat" => "c"}
+	
+	# OR render associations, association-fields will have their "mapping" property set automatically
+    extjs_fields :name, :description, :company => [:name, :description]
+    
+  end
 
 After including the model mixin <tt>ExtJS::Model</tt>, try typing the following in <tt>irb</tt> console:
     >> User.extjs_record
@@ -73,12 +75,12 @@ Now render Ext components using helper method <tt>extjs_component</tt>
 
     @viewport = extjs_component(
       "xtype" => "viewport",
-      "frame" =&gt; true,
-      "layout" =&gt; "border")
-    @viewport.add("xtype" =&gt; "panel", "contentEl" =&gt; "hd", "region" =&gt; "north", "height" =&gt; 30)
-    @viewport.add(:partial =&gt; "/users/grid", "itemId" =&gt; "users-grid", "region" =&gt; "west")
-    @viewport.add(:partial =&gt; "/tasks/grid", "itemId" =&gt; "tasks-grid", "region" =&gt; "center")
-    @viewport.add("xtype" =&gt; "panel", "contentEl" =&gt; "ft", "region" =&gt; "south", "height" =&gt; 20)
+      "frame" => true,
+      "layout" => "border")
+    @viewport.add("xtype" => "panel", "contentEl" => "hd", "region" => "north", "height" => 30)
+    @viewport.add(:partial => "/users/grid", "itemId" => "users-grid", "region" => "west")
+    @viewport.add(:partial => "/tasks/grid", "itemId" => "tasks-grid", "region" => "center")
+    @viewport.add("xtype" => "panel", "contentEl" => "ft", "region" => "south", "height" => 20)
 
 Note how it can also render partials.  Partials will be invoked with a local-variable named "container", a reference to the
 parent Ext::Component instance which added the partial.  If no "container" is specified, it would be expected that your partial
