Implemented support to follow has_one associations. has_one associations should work quite the same as belongs_to. Only difference is, that the foreign key is part of the other model.
Added code that handles the edge case like this:

    class Model1 < ActiveRecord::Base
      belongs_to :model2
      include ExtJS::Model
      extjs_fields :id, :model2
    end
    class Model2 < ActiveRecord::Base
      has_one :model1
      include ExtJS::Model
      extjs_fields :id, :model1
    end

without proper handling of this cyclic refrence any call to extjs_record or to_record would yield in an infinite loop

--- a/README.rdoc
+++ b/README.rdoc
@@ -62,7 +62,7 @@ E.g. with the following definition:
     class User < ActiveRecord::Base
       include ExtJS::Model
 
-      extjs_fieldset :grid, [:name, :description, :company => [:name, :description]]
+      extjs_fieldset :grid, fields => [:name, :description, :company => [:name, :description]]
       extjs_fieldset :combo, [:full_name]
   
       def full_name
